objects/CSD_OEM_Mapping_Daily_BBB__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_For_Others_c__c</fullName>
        <label>Allocation For Others</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Backlog_Amount_After_Allocation__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Backlog_Amount_USD__c  *  CSD_OEM_Mapping__r.Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backlog Amount After Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backlog_Amount__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Backlog_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backlog Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Amount_After_Allocation__c</fullName>
        <formula>Billing_Amount__c *  CSD_OEM_Mapping__r.Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Amount After Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Amount__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Bill_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billings_Margin__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Billings_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billings Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Book_Amount_After_Allocation__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Book_Amount_USD__c  *  CSD_OEM_Mapping__r.Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Amount After Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Amount__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Book_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Margin__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Bookings_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSD_OEM_Mapping__c</fullName>
        <label>CSD OEM Mapping</label>
        <referenceTo>OEM_Mapping_Rule__c</referenceTo>
        <relationshipLabel>OEM Mapping Daily BBB</relationshipLabel>
        <relationshipName>OEM_Mapping_Daily_BBB</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Daily_Booking_Billing_Backlog_By_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Daily Booking/Billing/Backlog By Part</label>
        <referenceTo>BBB_Day_Direct_Bill_Book_Bklg_Cust_PN__c</referenceTo>
        <relationshipLabel>OEM Mapping Daily BBB</relationshipLabel>
        <relationshipName>OEM_Mapping_Daily_BBB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GPL_Family__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Part__r.Product_Hierarchy__r.CSD_GPL_Family__c</formula>
        <label>GPL Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_code__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Part__r.GPL_txt__c</formula>
        <label>GPL code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBC1__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD1_Industry_Business_Code__c</formula>
        <label>IBC1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Account__c</fullName>
        <formula>CSD_OEM_Mapping__r.OEM__r.OEM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OEM Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_No__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Part__r.Name</formula>
        <label>Part No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_center__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Profit_Center__c</formula>
        <label>Profit center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_center_desc__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.SAP_Profit_Center_Code__c</formula>
        <label>SAP Profit center desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Region_2015__c</fullName>
        <description>CSD Sales Office Region 2015</description>
        <formula>IF(NOT(CONTAINS(&apos;S001,S002,S003&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD1_SALES_OFFICE_CDE__c)),CASE(Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD1_SALES_OFFICE_CDE__c, &apos;S001&apos;, &apos;Americas&apos;,&apos;S002&apos;, &apos;Asia Pacific&apos;, &apos;S003&apos;, &apos;EMEA&apos;,&apos;Others&apos;),
IF(CONTAINS(&apos;S001,S003&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD1_SALES_OFFICE_CDE__c),CASE(Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD1_SALES_OFFICE_CDE__c, &apos;S001&apos;, &apos;Americas&apos;, &apos;S003&apos;, &apos;EMEA&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD1_SALES_OFFICE_CDE__c),
IF(CONTAINS(&apos;S026,S018,S025&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD2_SALES_OFFICE_CDE__c),CASE(Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD2_SALES_OFFICE_CDE__c, &apos;S026&apos;, &apos;Korea&apos;, &apos;S018&apos;, &apos;South Asia Pacific&apos;,&apos;S025&apos;,&apos;Japan&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD2_SALES_OFFICE_CDE__c), 
IF(CONTAINS(&apos;01379274,02844953,02987544&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.Account_Number_Short__c), &apos;China&apos;, 
IF(CONTAINS(&apos;GIANTS,MARINERS&apos;, CSD_OEM_Mapping__r.OEM_Account__c), &apos;China&apos;, 
IF(Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD3_SALES_OFFICE_CDE__c=&apos;S029&apos;,&apos;Taiwan&apos;, 
IF(Daily_Booking_Billing_Backlog_By_Part__r.SAP_Profit_Center_Code__c = &apos;0000000259&apos;,&apos;Taiwan&apos;, 
IF(CONTAINS(&apos;00033915,00001242&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.WWCORPACCT__c),&apos;Taiwan&apos;,&apos;China&apos;) 
) 
) 
) 
) 
) 
))</formula>
        <label>Sales Office Region 2015</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Region__c</fullName>
        <description>DND Sales Office Region</description>
        <formula>IF(
CONTAINS(&apos;S001,S003&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD1_SALES_OFFICE_CDE__c),


CASE(Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD1_SALES_OFFICE_CDE__c, &apos;S001&apos;, &apos;Americas&apos;, &apos;S003&apos;, 

&apos;EMEA&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD1_SALES_OFFICE_CDE__c),

 IF(
CONTAINS(&apos;S025,S026&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD3_SALES_OFFICE_CDE__c),

CASE(Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD3_SALES_OFFICE_CDE__c, &apos;S025&apos;, &apos;JAPAN&apos;, &apos;S026&apos;, 

&apos;KOREA&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.DD3_SALES_OFFICE_CDE__c),

IF(CONTAINS(&apos;0464,1337,2142&apos;,Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.Account_Number_DND__c), &apos;India&apos;, 

IF((CONTAINS(&apos;OPPO,VIVO, XIAOMI, COOLPAD, CHINA WHITEBOX&apos;, CSD_OEM_Mapping__r.OEM_Account__c) || CONTAINS(&apos;38464&apos;, WWAC__c)),&apos;China Mobile&apos;,
 
&apos;Asia excl JP&amp;KR&apos;


)

)

)


)</formula>
        <label>Sales Office Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_account__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.Tech_SoldToAccountCode__c</formula>
        <label>Sold-to account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_account_name__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.Name</formula>
        <label>Sold-to account name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Transaction_Date__c</formula>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WWAC_Name__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.WWCORPACCTNM__c</formula>
        <label>WWAC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAC__c</fullName>
        <formula>Daily_Booking_Billing_Backlog_By_Part__r.Customer__r.WWCORPACCT__c</formula>
        <label>WWAC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>need_summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>need summary</label>
        <type>Checkbox</type>
    </fields>
    <label>CSD OEM Mapping Daily BBB</label>
    <nameField>
        <displayFormat>MDBBB-{0}</displayFormat>
        <label>CSD OEM Mapping Daily BBB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OEM Mapping Daily BBB</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>